--- a/app/src/main/res/layout/activity_repo_detail.xml
+++ b/app/src/main/res/layout/activity_repo_detail.xml
@@ -129,6 +129,7 @@
 
 
                         <android.support.v7.widget.AppCompatImageView
+                            android:visibility="invisible"
                             android:transitionName="@string/transition_background"
                             android:id="@+id/item_img_language"
                             android:layout_width="wrap_content"
@@ -143,6 +144,7 @@
                             />
 
                         <android.support.v7.widget.AppCompatTextView
+                            android:visibility="invisible"
                             android:transitionName="@string/transition_language"
                             android:id="@+id/item_language"
                             android:layout_width="wrap_content"
