--- a/app/src/main/res/layout/activity_repo_list.xml
+++ b/app/src/main/res/layout/activity_repo_list.xml
@@ -1,103 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <data class="GithubListActivityBinding" />
-
-
-    <android.support.design.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/ghost_white">
-
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/appBarLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:elevation="@dimen/card_image_view_elevation"
-            app:elevation="@dimen/card_image_view_elevation">
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
 
-            <android.support.design.widget.CollapsingToolbarLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+</FrameLayout>
+<!--<layout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto">-->
+
+<!--    <data class="GithubListActivityBinding" />-->
 
 
-                <android.support.constraint.ConstraintLayout
-                    android:id="@+id/constraint_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+<!--    <android.support.design.widget.CoordinatorLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:background="@color/ghost_white">-->
+
+<!--        <android.support.design.widget.AppBarLayout-->
+<!--            android:id="@+id/appBarLayout"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:background="@color/colorPrimary"-->
+<!--            android:elevation="@dimen/card_image_view_elevation"-->
+<!--            app:elevation="@dimen/card_image_view_elevation">-->
 
 
-                    <include
-                        android:id="@+id/main_toolbar"
-                        layout="@layout/view_toolbar"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <RelativeLayout
-                        android:animateLayoutChanges="true"
-                        android:id="@+id/filter_layout"
-                        android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        app:layout_constraintHeight_percent="0"
-                        app:layout_constraintHeight_default="percent"
-                        android:background="@color/colorPrimary"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/main_toolbar">
+<!--            <android.support.design.widget.CollapsingToolbarLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                app:layout_scrollFlags="scroll|exitUntilCollapsed">-->
 
 
-                        <android.support.v7.widget.RecyclerView
-                            android:id="@+id/filter_list"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginStart="@dimen/margin"
-                            android:layout_marginLeft="@dimen/margin"
-                            android:layout_marginTop="@dimen/margin_large"
-                            android:layout_marginEnd="@dimen/margin"
-                            android:layout_marginRight="@dimen/margin"
-                            android:clipToPadding="false"
-                            android:layoutAnimation="@anim/layout_anim_from_right" />
-
-                    </RelativeLayout>
-
-                </android.support.constraint.ConstraintLayout>
-
-            </android.support.design.widget.CollapsingToolbarLayout>
+<!--                <android.support.constraint.ConstraintLayout-->
+<!--                    android:id="@+id/constraint_layout"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content">-->
 
 
-        </android.support.design.widget.AppBarLayout>
+<!--                    <include-->
+<!--                        android:id="@+id/main_toolbar"-->
+<!--                        layout="@layout/view_toolbar"-->
+<!--                        app:layout_constraintEnd_toEndOf="parent"-->
+<!--                        app:layout_constraintStart_toStartOf="parent"-->
+<!--                        app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--                    <RelativeLayout-->
+<!--                        android:animateLayoutChanges="true"-->
+<!--                        android:id="@+id/filter_layout"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="0dp"-->
+<!--                        app:layout_constraintHeight_percent="0"-->
+<!--                        app:layout_constraintHeight_default="percent"-->
+<!--                        android:background="@color/colorPrimary"-->
+<!--                        app:layout_constraintEnd_toEndOf="parent"-->
+<!--                        app:layout_constraintStart_toStartOf="parent"-->
+<!--                        app:layout_constraintTop_toBottomOf="@+id/main_toolbar">-->
 
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:behavior_overlapTop="64dp"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+<!--                        <android.support.v7.widget.RecyclerView-->
+<!--                            android:id="@+id/filter_list"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="match_parent"-->
+<!--                            android:layout_marginStart="@dimen/margin"-->
+<!--                            android:layout_marginLeft="@dimen/margin"-->
+<!--                            android:layout_marginTop="@dimen/margin_large"-->
+<!--                            android:layout_marginEnd="@dimen/margin"-->
+<!--                            android:layout_marginRight="@dimen/margin"-->
+<!--                            android:clipToPadding="false"-->
+<!--                            android:layoutAnimation="@anim/layout_anim_from_right" />-->
+
+<!--                    </RelativeLayout>-->
+
+<!--                </android.support.constraint.ConstraintLayout>-->
+
+<!--            </android.support.design.widget.CollapsingToolbarLayout>-->
 
 
-            <include
-                android:id="@+id/view_loader"
-                layout="@layout/view_loader" />
-
-            <include
-                android:id="@+id/view_empty"
-                layout="@layout/view_empty" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layoutAnimation="@anim/layout_anim_from_bottom"/>
-
-        </RelativeLayout>
+<!--        </android.support.design.widget.AppBarLayout>-->
 
 
-    </android.support.design.widget.CoordinatorLayout>
+<!--        <RelativeLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            app:behavior_overlapTop="64dp"-->
+<!--            app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
 
 
-</layout>
+<!--            <include-->
+<!--                android:id="@+id/view_loader"-->
+<!--                layout="@layout/view_loader" />-->
+
+<!--            <include-->
+<!--                android:id="@+id/view_empty"-->
+<!--                layout="@layout/view_empty" />-->
+
+<!--            <android.support.v7.widget.RecyclerView-->
+<!--                android:id="@+id/recyclerView"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layoutAnimation="@anim/layout_anim_from_bottom"/>-->
+
+<!--        </RelativeLayout>-->
+
+
+<!--    </android.support.design.widget.CoordinatorLayout>-->
+
+
+<!--</layout>-->
