Added themes for light/dark mode

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,26 +1,143 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#dd1029</color>
-    <color name="colorPrimaryDark">#b30b20</color>
-    <color name="colorAccent">#f52946</color>
-
-    <color name="ghost_white">#F9F9FB</color>
-
-    <color name="item_color_title">#060606</color>
-    <color name="item_color_time">#bfbfbf</color>
-    <color name="item_color_desc">#ababab</color>
-    <color name="item_color_like">#676767</color>
-    <color name="item_color_shadow">#c9f2f3</color>
-    <color name="item_color_stars">#76b5ff</color>
-    <color name="item_color_watchers">#ffdd00</color>
-    <color name="item_color_forks">#a07aea</color>
-    <color name="item_color_star_text">#a2b4ca</color>
-    <color name="item_color_line">#ecf2f9</color>
-    <color name="bg_ripple">#66aeaeae</color>
-
-
-    <color name="color_blue">#54c5f8</color>
-    <color name="color_orange">#f88909</color>
-    <color name="color_yellow">#f0db4f</color>
-
+    <color name="md_theme_primary">#3E6700</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
+    <color name="md_theme_primaryContainer">#4F8200</color>
+    <color name="md_theme_onPrimaryContainer">#F9FFEA</color>
+    <color name="md_theme_secondary">#4B662A</color>
+    <color name="md_theme_onSecondary">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer">#CCEEA1</color>
+    <color name="md_theme_onSecondaryContainer">#516D2F</color>
+    <color name="md_theme_tertiary">#00694E</color>
+    <color name="md_theme_onTertiary">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer">#008564</color>
+    <color name="md_theme_onTertiaryContainer">#F5FFF8</color>
+    <color name="md_theme_error">#BA1A1A</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+    <color name="md_theme_errorContainer">#FFDAD6</color>
+    <color name="md_theme_onErrorContainer">#93000A</color>
+    <color name="md_theme_background">#F7FBEA</color>
+    <color name="md_theme_onBackground">#191D13</color>
+    <color name="md_theme_surface">#F7FBEA</color>
+    <color name="md_theme_onSurface">#191D13</color>
+    <color name="md_theme_surfaceVariant">#DEE6CD</color>
+    <color name="md_theme_onSurfaceVariant">#424937</color>
+    <color name="md_theme_outline">#727A66</color>
+    <color name="md_theme_outlineVariant">#C2CAB2</color>
+    <color name="md_theme_scrim">#000000</color>
+    <color name="md_theme_inverseSurface">#2E3227</color>
+    <color name="md_theme_inverseOnSurface">#EFF3E2</color>
+    <color name="md_theme_inversePrimary">#97D945</color>
+    <color name="md_theme_primaryFixed">#B2F65F</color>
+    <color name="md_theme_onPrimaryFixed">#102000</color>
+    <color name="md_theme_primaryFixedDim">#97D945</color>
+    <color name="md_theme_onPrimaryFixedVariant">#2F4F00</color>
+    <color name="md_theme_secondaryFixed">#CCEEA1</color>
+    <color name="md_theme_onSecondaryFixed">#102000</color>
+    <color name="md_theme_secondaryFixedDim">#B1D188</color>
+    <color name="md_theme_onSecondaryFixedVariant">#344E14</color>
+    <color name="md_theme_tertiaryFixed">#7CF9CB</color>
+    <color name="md_theme_onTertiaryFixed">#002116</color>
+    <color name="md_theme_tertiaryFixedDim">#5DDCB0</color>
+    <color name="md_theme_onTertiaryFixedVariant">#00513C</color>
+    <color name="md_theme_surfaceDim">#D8DCCC</color>
+    <color name="md_theme_surfaceBright">#F7FBEA</color>
+    <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow">#F2F5E5</color>
+    <color name="md_theme_surfaceContainer">#ECF0DF</color>
+    <color name="md_theme_surfaceContainerHigh">#E6EADA</color>
+    <color name="md_theme_surfaceContainerHighest">#E0E4D4</color>
+    <color name="md_theme_primary_mediumContrast">#233D00</color>
+    <color name="md_theme_onPrimary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#4A7A00</color>
+    <color name="md_theme_onPrimaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_mediumContrast">#243D03</color>
+    <color name="md_theme_onSecondary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#597637</color>
+    <color name="md_theme_onSecondaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_mediumContrast">#003F2D</color>
+    <color name="md_theme_onTertiary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#007C5D</color>
+    <color name="md_theme_onTertiaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_error_mediumContrast">#740006</color>
+    <color name="md_theme_onError_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_mediumContrast">#CF2C27</color>
+    <color name="md_theme_onErrorContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_background_mediumContrast">#F7FBEA</color>
+    <color name="md_theme_onBackground_mediumContrast">#191D13</color>
+    <color name="md_theme_surface_mediumContrast">#F7FBEA</color>
+    <color name="md_theme_onSurface_mediumContrast">#0E1209</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#DEE6CD</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#313928</color>
+    <color name="md_theme_outline_mediumContrast">#4E5543</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#68705C</color>
+    <color name="md_theme_scrim_mediumContrast">#000000</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#2E3227</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#EFF3E2</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#97D945</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#4A7A00</color>
+    <color name="md_theme_onPrimaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#395F00</color>
+    <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#597637</color>
+    <color name="md_theme_onSecondaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#425D21</color>
+    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#007C5D</color>
+    <color name="md_theme_onTertiaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#006148</color>
+    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#C4C8B9</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#F7FBEA</color>
+    <color name="md_theme_surfaceContainerLowest_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#F2F5E5</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#E6EADA</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#DBDFCE</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#CFD3C4</color>
+    <color name="md_theme_primary_highContrast">#1C3200</color>
+    <color name="md_theme_onPrimary_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_highContrast">#305200</color>
+    <color name="md_theme_onPrimaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_highContrast">#1C3200</color>
+    <color name="md_theme_onSecondary_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_highContrast">#365116</color>
+    <color name="md_theme_onSecondaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_highContrast">#003325</color>
+    <color name="md_theme_onTertiary_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#00543E</color>
+    <color name="md_theme_onTertiaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_error_highContrast">#600004</color>
+    <color name="md_theme_onError_highContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_highContrast">#98000A</color>
+    <color name="md_theme_onErrorContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_background_highContrast">#F7FBEA</color>
+    <color name="md_theme_onBackground_highContrast">#191D13</color>
+    <color name="md_theme_surface_highContrast">#F7FBEA</color>
+    <color name="md_theme_onSurface_highContrast">#000000</color>
+    <color name="md_theme_surfaceVariant_highContrast">#DEE6CD</color>
+    <color name="md_theme_onSurfaceVariant_highContrast">#000000</color>
+    <color name="md_theme_outline_highContrast">#272E1E</color>
+    <color name="md_theme_outlineVariant_highContrast">#444C3A</color>
+    <color name="md_theme_scrim_highContrast">#000000</color>
+    <color name="md_theme_inverseSurface_highContrast">#2E3227</color>
+    <color name="md_theme_inverseOnSurface_highContrast">#FFFFFF</color>
+    <color name="md_theme_inversePrimary_highContrast">#97D945</color>
+    <color name="md_theme_primaryFixed_highContrast">#305200</color>
+    <color name="md_theme_onPrimaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#203900</color>
+    <color name="md_theme_onPrimaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_highContrast">#365116</color>
+    <color name="md_theme_onSecondaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#213901</color>
+    <color name="md_theme_onSecondaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#00543E</color>
+    <color name="md_theme_onTertiaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#003B2A</color>
+    <color name="md_theme_onTertiaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_highContrast">#B6BBAB</color>
+    <color name="md_theme_surfaceBright_highContrast">#F7FBEA</color>
+    <color name="md_theme_surfaceContainerLowest_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#EFF3E2</color>
+    <color name="md_theme_surfaceContainer_highContrast">#E0E4D4</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#D2D6C6</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#C4C8B9</color>
 </resources>
