--- a/app/src/main/res/layout/view_empty.xml
+++ b/app/src/main/res/layout/view_empty.xml
@@ -1,36 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/empty_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/transparent"
+    android:padding="@dimen/padding"
+    android:visibility="gone"
+    tools:visibility="visible">
 
 
-</FrameLayout>
-<!--<layout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto">-->
-
-<!--    <android.support.constraint.ConstraintLayout-->
-<!--        android:visibility="gone"-->
-<!--        android:id="@+id/empty_container"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:background="@android:color/transparent">-->
-
-
-<!--        <android.support.v7.widget.AppCompatTextView-->
-<!--            android:id="@+id/empty_text"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:fontFamily="@font/montserrat"-->
-<!--            android:gravity="center_horizontal"-->
-<!--            android:text="@string/empty_text"-->
-<!--            android:textColor="@color/colorPrimary"-->
-<!--            android:textSize="@dimen/font_large"-->
-<!--            app:layout_constraintVertical_bias="0.2"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"/>-->
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/empty_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="@string/text_empty"
+        android:textColor="?attr/colorPrimary"
+        android:textSize="?attr/textAppearanceLabelMedium"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.4" />
 
 
-<!--    </android.support.constraint.ConstraintLayout>-->
-<!--</layout>-->
+</androidx.constraintlayout.widget.ConstraintLayout>
