--- a/app/src/main/res/layout/view_empty.xml
+++ b/app/src/main/res/layout/view_empty.xml
@@ -19,7 +19,7 @@
         android:gravity="center_horizontal"
         android:text="@string/text_empty"
         android:textColor="?attr/colorPrimary"
-        android:textSize="?attr/textAppearanceLabelMedium"
+        android:textAppearance="?attr/textAppearanceLabelMedium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.4" />
